--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,20 @@
 black==22.1.0
-click==8.0.4
+certifi==2021.10.8
+charset-normalizer==2.0.11
+click==8.0.3
+idna==3.3
 mypy-extensions==0.4.3
+numpy==1.22.2
+pandas==1.4.0
 pathspec==0.9.0
 Pillow==9.0.1
-platformdirs==2.5.1
-pypng==0.0.21
+platformdirs==2.5.0
+python-dateutil==2.8.2
+python-dotenv==0.20.0
+pytz==2021.3
 qrcode==7.3.1
+requests==2.27.1
+six==1.16.0
 tomli==2.0.1
-typing_extensions==4.1.1
+typing_extensions==4.0.1
+urllib3==1.26.8
